refactor csv files for hugging face

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,27 +12,27 @@
     "from matplotlib import image as mpimg\n",
     "import seaborn as sns\n",
     "import cv2\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('datasets/training/labels.csv')\n",
-    "df_test = pd.read_csv('datasets/test/labels.csv')\n",
-    "df_eval = pd.read_csv('datasets/evaluation/labels.csv')\n",
+    "df_train = pd.read_csv('datasets/training/metadata.csv')\n",
+    "df_test = pd.read_csv('datasets/test/metadata.csv')\n",
+    "df_eval = pd.read_csv('datasets/evaluation/metadata.csv')\n",
     "\n",
     "df_train['type'] = 'train'\n",
     "df_test['type'] = 'test'\n",
-    "df_eval['type'] = 'eval'"
+    "df_eval['type'] = 'eval'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
+       "      <th>file_name</th>\n",
        "      <th>Disease_Risk</th>\n",
        "      <th>DR</th>\n",
        "      <th>ARMD</th>\n",
@@ -67,7 +67,6 @@
        "      <th>TSLN</th>\n",
        "      <th>ERM</th>\n",
        "      <th>...</th>\n",
-       "      <th>CME</th>\n",
        "      <th>PTCR</th>\n",
        "      <th>CF</th>\n",
        "      <th>VH</th>\n",
@@ -77,12 +76,13 @@
        "      <th>PLQ</th>\n",
        "      <th>HPED</th>\n",
        "      <th>CL</th>\n",
+       "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>1.png</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -102,11 +102,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <td>2.png</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -126,11 +126,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <td>3.png</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -150,11 +150,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>4.png</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -174,11 +174,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>5.png</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -198,11 +198,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>6</td>\n",
+       "      <td>6.png</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -222,11 +222,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>7</td>\n",
+       "      <td>7.png</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -246,11 +246,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>8</td>\n",
+       "      <td>8.png</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -270,11 +270,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>9</td>\n",
+       "      <td>9.png</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -294,11 +294,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>10</td>\n",
+       "      <td>10.png</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -318,53 +318,53 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>train</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 47 columns</p>\n",
+       "<p>10 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID  Disease_Risk  DR  ARMD  MH  DN  MYA  BRVO  TSLN  ERM  ...  CME  PTCR   \n",
-       "0   1             1   1     0   0   0    0     0     0    0  ...    0     0  \\\n",
-       "1   2             1   1     0   0   0    0     0     0    0  ...    0     0   \n",
-       "2   3             1   1     0   0   0    0     0     0    0  ...    0     0   \n",
-       "3   4             1   0     0   1   0    0     0     0    0  ...    0     0   \n",
-       "4   5             1   1     0   0   0    0     0     0    0  ...    0     0   \n",
-       "5   6             1   0     1   0   0    1     0     0    0  ...    0     0   \n",
-       "6   7             1   0     1   0   0    1     0     0    0  ...    0     0   \n",
-       "7   8             1   0     1   0   0    1     0     0    0  ...    0     0   \n",
-       "8   9             1   0     0   0   0    0     0     0    1  ...    0     0   \n",
-       "9  10             0   0     0   0   0    0     0     0    0  ...    0     0   \n",
+       "  file_name  Disease_Risk  DR  ARMD  MH  DN  MYA  BRVO  TSLN  ERM  ...  PTCR   \n",
+       "0     1.png             1   1     0   0   0    0     0     0    0  ...     0  \\\n",
+       "1     2.png             1   1     0   0   0    0     0     0    0  ...     0   \n",
+       "2     3.png             1   1     0   0   0    0     0     0    0  ...     0   \n",
+       "3     4.png             1   0     0   1   0    0     0     0    0  ...     0   \n",
+       "4     5.png             1   1     0   0   0    0     0     0    0  ...     0   \n",
+       "5     6.png             1   0     1   0   0    1     0     0    0  ...     0   \n",
+       "6     7.png             1   0     1   0   0    1     0     0    0  ...     0   \n",
+       "7     8.png             1   0     1   0   0    1     0     0    0  ...     0   \n",
+       "8     9.png             1   0     0   0   0    0     0     0    1  ...     0   \n",
+       "9    10.png             0   0     0   0   0    0     0     0    0  ...     0   \n",
        "\n",
-       "   CF  VH  MCA  VS  BRAO  PLQ  HPED  CL  \n",
-       "0   0   0    0   0     0    0     0   0  \n",
-       "1   0   0    0   0     0    0     0   0  \n",
-       "2   0   0    0   0     0    0     0   0  \n",
-       "3   0   0    0   0     0    0     0   0  \n",
-       "4   0   0    0   0     0    0     0   0  \n",
-       "5   0   0    0   0     0    0     0   0  \n",
-       "6   0   0    0   0     0    0     0   0  \n",
-       "7   0   0    0   0     0    0     0   0  \n",
-       "8   0   0    0   0     0    0     0   0  \n",
-       "9   0   0    0   0     0    0     0   0  \n",
+       "   CF  VH  MCA  VS  BRAO  PLQ  HPED  CL   type  \n",
+       "0   0   0    0   0     0    0     0   0  train  \n",
+       "1   0   0    0   0     0    0     0   0  train  \n",
+       "2   0   0    0   0     0    0     0   0  train  \n",
+       "3   0   0    0   0     0    0     0   0  train  \n",
+       "4   0   0    0   0     0    0     0   0  train  \n",
+       "5   0   0    0   0     0    0     0   0  train  \n",
+       "6   0   0    0   0     0    0     0   0  train  \n",
+       "7   0   0    0   0     0    0     0   0  train  \n",
+       "8   0   0    0   0     0    0     0   0  train  \n",
+       "9   0   0    0   0     0    0     0   0  train  \n",
        "\n",
-       "[10 rows x 47 columns]"
+       "[10 rows x 48 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.head(10)"
+    "df_train.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -380,29 +380,29 @@
    ],
    "source": [
     "# Show some eye images with their pathologies\n",
-    "def show_images(ids):\n",
+    "def show_images(file_names):\n",
     "    plt.figure(figsize=(16, 12))\n",
-    "    \n",
-    "    for plot_index, id_ in enumerate(ids):\n",
+    "\n",
+    "    for plot_index, file_name in enumerate(file_names):\n",
     "        plt.subplot(4, 4, plot_index + 1)\n",
-    "        image = mpimg.imread(os.path.join('datasets/training/images', '{}.png'.format(id_)))\n",
+    "        image = mpimg.imread(os.path.join('datasets', 'training', file_name))\n",
     "        plt.imshow(image)\n",
     "        title = \"\"\n",
-    "        for desease in df.columns[2:]:\n",
-    "            if df[df['ID'] == id_][desease].values[0] == 1:\n",
+    "        for desease in df_train.columns[2:]:\n",
+    "            if df_train[df_train['file_name'] == file_name][desease].values[0] == 1:\n",
     "                title += desease + \" \"\n",
     "        plt.title(title)\n",
     "        plt.axis('off')\n",
-    "        \n",
+    "\n",
     "    plt.show()\n",
     "\n",
     "# Show the eyes with id 1 to 16\n",
-    "show_images(df['ID'][:16])"
+    "show_images(df_train['file_name'][:16])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "Text(0, 0.5, 'Number of images')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -429,12 +429,15 @@
    "source": [
     "# Histogram of the number of images with each pathology for all the dataset (train, test and validation)\n",
     "plt.figure(figsize=(24, 8))\n",
-    "sns.barplot(y=pd.concat([df_train, df_test, df_eval]).drop(['ID', 'Disease_Risk'], axis=1).sum().values,\n",
-    "    x=pd.concat([df_train, df_test, df_eval]).drop(['ID', 'Disease_Risk'], axis=1).columns)\n",
+    "\n",
+    "values = pd.concat([df_train, df_test, df_eval]).drop(['file_name', 'Disease_Risk', 'type'], axis=1)\n",
+    "x = values.columns\n",
+    "y = values.sum().values\n",
+    "\n",
+    "sns.barplot(y=y,x=x)\n",
     "plt.title(\"Number of images with each pathology\", fontsize=14)\n",
     "plt.xlabel(\"Pathology\", fontsize=12)\n",
-    "plt.ylabel(\"Number of images\", fontsize=12)\n",
-    "\n"
+    "plt.ylabel(\"Number of images\", fontsize=12)\n"
    ]
   },
   {
@@ -461,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
