Add tensorboard to multilabel classifier jupyter

--- a/models/MultiLabelClassifierPytorch.ipynb
+++ b/models/MultiLabelClassifierPytorch.ipynb
@@ -22,7 +22,7 @@
     "from lightning.pytorch.utilities.types import OptimizerLRScheduler\n",
     "import torchmetrics\n",
     "import numpy as np\n",
-    "from flash.image import ImageClassificationData, ImageClassifier"
+    "from flash.image import ImageClassificationData, ImageClassifier\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "        if self.transforms is not None:\n",
     "            image = transforms.ToTensor()(image)\n",
     "            image = image.type(torch.float32)\n",
-    "           \n",
+    "\n",
     "            image = self.normalize(image)\n",
     "\n",
     "            image = transforms.ToImagePIL()(image)\n",
@@ -54,31 +54,31 @@
     "                image_layers[i] = transforms.ToTensor()(img)\n",
     "\n",
     "        image = torch.cat(image_layers, dim=0)\n",
-    "        \n",
+    "\n",
     "        return image, label\n",
     "\n",
     "    def __len__(self):\n",
     "        return self.df.shape[0]\n",
-    "    \n",
+    "\n",
     "    def get_img(self, index):\n",
     "        img_path, label = self.df.iloc[index]\n",
     "        return Image.open(img_path), label\n",
-    "    \n",
+    "\n",
     "    def show_img(self, index):\n",
     "\n",
     "        image, label = self.get_img(index)\n",
     "        transformed_image = self.transforms(image)\n",
-    "        \n",
+    "\n",
     "        fig, ax = plt.subplots(1, len(transformed_image)+1, figsize=(10, 10))\n",
     "        ax[0].imshow(image)\n",
     "        ax[0].set_title(self.decode_labels(label))\n",
     "\n",
     "        for i, img in enumerate(transformed_image):\n",
     "            ax[i+1].imshow(transforms.ToPILImage()(img))\n",
-    "    \n",
+    "\n",
     "    def show_images_per_deasease(self):\n",
     "        df_unique = self.df.copy()\n",
-    "    \n",
+    "\n",
     "        # Count the number of 1 in labels\n",
     "        df_unique['sum'] = df_unique['labels'].apply(lambda x: sum(x))\n",
     "        df_unique = df_unique[df_unique['sum'] == 2].drop('sum', axis=1)\n",
@@ -93,7 +93,7 @@
     "        return df[['file_name', 'labels']]\n",
     "\n",
     "    def decode_labels(self, labels):\n",
-    "        return [self.label_list[i] for i, x in enumerate(labels) if x == 1]"
+    "        return [self.label_list[i] for i, x in enumerate(labels) if x == 1]\n"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "\n",
     "train_dataset = MultiLabelDataset(train_df, transforms=transform_image, label_list=label_list, normalize=normalize_image)\n",
     "val_dataset = MultiLabelDataset(val_df, transforms=transform_image, label_list=label_list, normalize=normalize_image)\n",
-    "test_dataset = MultiLabelDataset(test_df, transforms=transform_image, label_list=label_list, normalize=normalize_image)"
+    "test_dataset = MultiLabelDataset(test_df, transforms=transform_image, label_list=label_list, normalize=normalize_image)\n"
    ]
   },
   {
@@ -261,7 +261,7 @@
    ],
    "source": [
     "train_dataset.show_img(0)\n",
-    "train_dataset.show_img(1600)"
+    "train_dataset.show_img(1600)\n"
    ]
   },
   {
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "print(train_dataset[0][0].shape)"
+    "print(train_dataset[0][0].shape)\n"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dataset.show_images_per_deasease()"
+    "# train_dataset.show_images_per_deasease()\n"
    ]
   },
   {
@@ -323,7 +323,7 @@
     "\n",
     "    def test_dataloader(self):\n",
     "        return DataLoader(self.test_dataset, batch_size=self.batch_size, shuffle=False, num_workers=0)\n",
-    "    \n",
+    "\n",
     "\n"
    ]
   },
@@ -396,19 +396,19 @@
     "\n",
     "    def forward(self, x, *args, **kwargs):\n",
     "        return self.model(x)\n",
-    "    \n",
+    "\n",
     "    def configure_optimizers(self):\n",
     "        self.optimizer = torch.optim.Adam(self.model.parameters(), lr=self.lr)\n",
     "#         self.scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(self.optimizer, T_max=CFG.t_max, eta_min=CFG.min_lr)\n",
-    "        self.scheduler = torch.optim.lr_scheduler.OneCycleLR(self.optimizer, \n",
-    "                                                                max_lr=self.lr, \n",
+    "        self.scheduler = torch.optim.lr_scheduler.OneCycleLR(self.optimizer,\n",
+    "                                                                max_lr=self.lr,\n",
     "                                                                epochs=self.epochs,\n",
     "                                                                steps_per_epoch=len(self.data_loader))\n",
-    "                                                                \n",
+    "\n",
     "        scheduler = {'scheduler': self.scheduler, 'interval': 'step',}\n",
     "\n",
     "        return [self.optimizer], [scheduler]\n",
-    "    \n",
+    "\n",
     "    def training_step(self, batch, batch_idx):\n",
     "        x, y = batch\n",
     "        y_hat = self.model(x)\n",
@@ -430,9 +430,9 @@
     "            prog_bar=True,\n",
     "            logger=True\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        return loss\n",
-    "    \n",
+    "\n",
     "    def validation_step(self, batch, batch_idx):\n",
     "        x, y = batch\n",
     "        y_hat = self.model(x)\n",
@@ -453,9 +453,9 @@
     "            prog_bar=True,\n",
     "            logger=True\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        return loss\n",
-    "    \n",
+    "\n",
     "    def test_step(self, batch, batch_idx):\n",
     "        x, y = batch\n",
     "        y_hat = self.model(x)\n",
@@ -476,8 +476,8 @@
     "            prog_bar=True,\n",
     "            logger=True\n",
     "        )\n",
-    "        \n",
-    "        return loss"
+    "\n",
+    "        return loss\n"
    ]
   },
   {
@@ -491,7 +491,7 @@
     "\n",
     "model = MultiLabelImageClassifierModel(num_classes=len(label_list), input_size=IMAGE_SIZE, num_channels=7)\n",
     "\n",
-    "lmodule = LModule(model, label_list, lr=1e-3, epochs=10, data_loader=data_loader.train_dataloader())"
+    "lmodule = LModule(model, label_list, lr=1e-3, epochs=10, data_loader=data_loader.train_dataloader())\n"
    ]
   },
   {
@@ -720,7 +720,7 @@
     "plt.plot(trainer.callback_metrics['val_recall'])\n",
     "plt.title('Recall')\n",
     "plt.legend(['train', 'val'])\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -741,7 +741,7 @@
    ],
    "source": [
     "model = MultiLabelImageClassifierModel(num_classes=len(label_list), input_size=IMAGE_SIZE, num_channels=5)\n",
-    "model.load_state_dict(torch.load('./nul.pth'))"
+    "model.load_state_dict(torch.load('./nul.pth'))\n"
    ]
   },
   {
@@ -779,7 +779,18 @@
    ],
    "source": [
     "print(pred)\n",
-    "print(label)"
+    "print(label)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install tensorboard\n",
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir=lightning_logs/\n"
    ]
   }
  ],
@@ -799,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
